--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -10,17 +10,51 @@
 
 
 .navbar {
+  background-color: white;
+  height:80px;
+  z-index:5;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 0px;
+  position: sticky;
+  top:15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.navbar > img {
+.cart {
+  height: 90px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 1px;
+}
+
+.cart > img {
   width: 40px;
   height: 40px;
-  margin-bottom: 0px;
+  margin: 0; 
 }
+
+.total_cart_items {
+  visibility: hidden;
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0.11);
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  position: absolute;
+  right: -17px;
+  bottom: 51px;
+  font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .nav_logo{
     font-family: 'Satisfy', cursive;
@@ -45,7 +79,7 @@
   position: absolute; 
   top: 0; 
   margin: 0;
-  z-index: 2;
+  z-index: 0;
 }
 
 .discover_products {
